--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+@font-face {
+  font-family: "page-title";
+  src: url("./assets/fonts/page-title.otf");
+}
+
+@font-face {
+  font-family: "nav";
+  src: url("./assets/fonts/nav.otf");
+}
+
+@font-face {
+  font-family: "card-title";
+  src: url("./assets/fonts/card-title.otf");
+}
+
+@font-face {
+  font-family: "card-body";
+  src: url("./assets/fonts/card-body.otf");
+}
