--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -39,7 +39,8 @@
         width: max-content;
         height: 2em;
         font-size: 40px;
-        transition: color 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        transition: color 0.5s ease-in;
+
         @media screen and (max-width: 600px) {
           font-size: 25px;
         }
@@ -72,6 +73,8 @@
       .searchOption {
         width: 100%;
         height: 50%;
+        transition: color 1.5s ease;
+        font-family: "nav", consolas;
       }
     }
   }
