--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -9,6 +9,8 @@
   align-items: center;
   background-size: 100%;
   transition: bottom 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  border-top: 4px ridge white;
+  z-index: 1;
 
   &.displayNav {
     bottom: 0;
@@ -35,7 +37,7 @@
       .navBurger {
         display: grid;
         place-items: center;
-        color: black;
+        color: white;
         width: max-content;
         height: 2em;
         font-size: 40px;
@@ -43,9 +45,6 @@
 
         @media screen and (max-width: 600px) {
           font-size: 25px;
-        }
-        &.navOpen {
-          color: white;
         }
 
         &:hover {
@@ -74,6 +73,13 @@
         width: 100%;
         height: 50%;
         transition: color 1.5s ease;
+        font-size: 50px;
+        @media screen and (max-width: 700px) {
+          font-size: 30px;
+        }
+        @media screen and (max-width: 450px) {
+          font-size: 20px;
+        }
         font-family: "nav", consolas;
       }
     }
