--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: linear-gradient(#000000aa, #000000aa),
+    url("https://media.giphy.com/media/3o6gE8cWI3n5mCvQZ2/giphy.gif");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  background-color: black;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
@@ -15,15 +25,28 @@ code {
 
 @font-face {
   font-family: "nav";
-  src: url("./assets/fonts/nav.otf");
+  src: url("./assets/fonts/nav.ttf");
 }
 
 @font-face {
   font-family: "card-title";
-  src: url("./assets/fonts/card-title.otf");
+  src: url("./assets/fonts/card-title.ttf");
 }
 
 @font-face {
   font-family: "card-body";
-  src: url("./assets/fonts/card-body.otf");
+  src: url("./assets/fonts/card-body.ttf");
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+a:active {
+  color: pink;
 }
