added filter by year functionality

--- a/src/containers/CardList/CardList.module.scss
+++ b/src/containers/CardList/CardList.module.scss
@@ -1,8 +1,9 @@
 .cardList {
-  margin: 2%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   width: 95%;
-  height: 90%;
-  overflow-y: auto;
+  padding: 5% 0;
+  height: 65vh;
 }
