--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -4,40 +4,54 @@
   border-left: 5px solid white;
   border-right: 5px solid white;
   border-bottom: 10px solid white;
-  background-color: #ffffff22;
+  background-color: #00000022;
   margin: 2.5%;
-  width: 45%;
-  height: 140%;
+  width: 220px;
+  min-height: calc(336px + 14vh);
   overflow: hidden;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
   .moviePoster {
     position: absolute;
     top: 0;
-    left: 0;
+    left: auto;
     overflow: hidden;
-    background-size: cover;
+    background-size: 220px 338px;
     background-repeat: no-repeat;
-    background-position: 100% -2%;
+    background-position: 50% 0;
     width: 102%;
-    height: 80%;
+    height: 336px;
     border-bottom: 2px white solid;
+    filter: grayscale(100%);
+    transition: filter 1.5s ease;
+
+    &:hover {
+      filter: none;
+    }
   }
 
   .titleWrapper {
     position: absolute;
     bottom: 0;
     left: 0;
-    min-height: 20%;
-    height: 20%;
+    height: 12vh;
     width: 100%;
     padding: 10%;
+    display: grid;
+    place-items: center;
 
     .movieTitle {
       color: white;
       text-align: center;
-      font-size: 20px;
+      font-size: 24px;
+      line-height: 1.1em;
       font-family: "card-body";
+      font-weight: 400;
+      text-shadow: -4px 0 0px black, 0 -4px 0px black;
     }
   }
 }
