--- a/src/components/MoviesByTitle/MoviesByTitle.module.scss
+++ b/src/components/MoviesByTitle/MoviesByTitle.module.scss
@@ -1,11 +1,12 @@
 .main {
-  position: fixed;
+  position: relative;
   padding: 5%;
   top: 0;
   left: 0;
   width: 100%;
-  margin: 5% 0 30vh 0;
-  height: 65%;
+  margin: 5vh 0 0 0;
+  height: 95vh;
+  min-height: 100%;
   background-color: transparent;
   border-top: 2px white ridge;
   border-bottom: 2px white ridge;
@@ -14,5 +15,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
