--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -56,6 +56,7 @@
         }
       }
     }
+
     .navOptions {
       list-style-type: none;
       display: grid;
@@ -64,23 +65,26 @@
       place-items: center;
       width: calc(95vw - 50px);
       height: 100%;
-      color: black;
-      &.navOpen {
-        color: white;
-      }
 
       .searchOption {
+        font-family: "nav", consolas;
         width: 100%;
         height: 50%;
-        transition: color 1.5s ease;
         font-size: 50px;
+        text-align: center;
+        transition: color 2s ease-in-out;
         @media screen and (max-width: 700px) {
           font-size: 30px;
         }
         @media screen and (max-width: 450px) {
           font-size: 20px;
         }
-        font-family: "nav", consolas;
+      }
+      &.navOpen .searchOption {
+        color: white;
+        a:hover {
+          color: gray;
+        }
       }
     }
   }
