--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@
 body {
   background-image: linear-gradient(#000000aa, #000000aa),
     url("https://media.giphy.com/media/3o6gE8cWI3n5mCvQZ2/giphy.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: auto 65vh;
+  background-position: center 5vh;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  height: 90vh;
   background-color: black;
 }
 
@@ -41,12 +41,4 @@ code {
 a {
   text-decoration: none;
   color: inherit;
-}
-
-a:hover {
-  color: hotpink;
-}
-
-a:active {
-  color: pink;
 }
