--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,8 +6,8 @@
   border-bottom: 10px solid white;
   background-color: #00000022;
   margin: 2.5%;
-  width: 220px;
-  min-height: calc(336px + 14vh);
+  width: 230px;
+  height: 460px;
   overflow: hidden;
   border-radius: 5px;
   display: flex;
@@ -24,7 +24,7 @@
     background-repeat: no-repeat;
     background-position: 50% 0;
     width: 102%;
-    height: 336px;
+    height: 340px;
     border-bottom: 2px white solid;
     filter: grayscale(100%);
     transition: filter 1.5s ease;
@@ -38,16 +38,16 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 12vh;
+    height: 105px;
     width: 100%;
-    padding: 10%;
+    padding: 1% 2%;
     display: grid;
     place-items: center;
 
     .movieTitle {
       color: white;
       text-align: center;
-      font-size: 24px;
+      font-size: 22px;
       line-height: 1.1em;
       font-family: "card-body";
       font-weight: 400;
