added filter by year functionality

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -29,20 +29,22 @@
     filter: grayscale(100%);
     transition: filter 1.5s ease;
     display: grid;
-    place-items: center;
+    place-items: right;
 
     .movieYear {
       color: transparent;
       writing-mode: vertical-lr;
       text-orientation: upright;
-      transition: color 1.5s ease;
-      font-size: 3em;
+      transition: color 1.5s ease, background-color 1.5s ease;
+      font-size: 4em;
       font-family: card-title;
+      font-weight: bold;
     }
     &:hover {
       filter: none;
       > .movieYear {
-        color: hotpink;
+        color: white;
+        background-color: #00000099;
       }
     }
   }
